--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.1.2",
     "babel-loader": "^6.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.8.2",
@@ -53,7 +55,7 @@
     "node-libs-browser": "^0.5.2",
     "parse-keys": "^1.3.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.1.0",
+    "react": "^15.3.2",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.2.7",
     "should": "^7.1.1",
@@ -74,6 +76,8 @@
     "normalize.css": "^3.0.3",
     "object-assign": "^4.0.1",
     "react-class": "^1.2.4",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-load-mask": "^2.0.1",
     "react-menus": "^2.0.5",
     "react-simple-toolbar": "^1.0.5",
