--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "node-uuid": "^1.4.3",
     "normalize.css": "^3.0.3",
     "object-assign": "^4.0.1",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react": "15.1.0",
+    "react-dom": "15.1.0",
     "react-class": "^1.2.4",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
