--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "node-libs-browser": "^0.5.2",
     "parse-keys": "^1.3.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
     "react-hot-loader": "^1.2.7",
     "should": "^7.1.1",
     "sorty": "^1.2.0",
@@ -76,6 +74,8 @@
     "react-class": "^1.2.4",
     "react-load-mask": "^2.0.1",
     "react-menus": "^2.0.5",
+    "react": "0.14.8",
+    "react-dom": "0.14.8",
     "react-simple-toolbar": "^1.0.5",
     "react-style-normalizer": "^1.2.8",
     "react-virtual-scroller": "^2.1.3",
