--- a/package.json
+++ b/package.json
@@ -1,98 +1,110 @@
 {
-    "name": "react-datagrid",
-    "version": "2.1.1",
-    "description": "React DataGrid",
-    "main": "lib/index.js",
-    "scripts": {
-        "test": "mocha --recursive --reporter spec --require should",
-        "test-w": "mocha --recursive --reporter spec --require should --watch",
-        "lib": "gulp",
-        "build-style": "webpack --progress --colors --config build/build-style.config.js",
-        "build-style-dist": "webpack --progress --colors --config build/build-style-dist.config.js",
-        "build-style-dist-min": "webpack --progress --colors --config build/build-style-dist-min.config.js",
-        "stats": "webpack --profile --progress --colors --config build/dist.config.js --json > stats.json",
-        "dist": "webpack --progress --colors --config build/dist.config.js",
-        "watch-dist": "webpack --watch --progress --colors --config build/dist.config.js",
-        "dist.min": "webpack --progress --colors -p --config build/dist.min.config.js",
-        "build": "NODE_ENV=production npm run lib && npm run dist && npm run dist.min && npm run build-style && npm run build-style-dist && npm run build-style-dist-min",
-        "dev": "NODE_ENV=production PORT=9090 webpack-dev-server --progress --colors --config  build/dev.config.js",
-        "hot": "NODE_ENV=production HOT=true PORT=9090 webpack-dev-server --progress --colors --config build/dev.config.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/zippyui/react-datagrid.git"
-    },
-    "keywords": [
-        "grid",
-        "datagrid",
-        "data-grid",
-        "grid",
-        "widget",
-        "table",
-        "list",
-        "react-component",
-        "react",
-        "grid"
-    ],
-    "devDependencies": {
-        "autoprefixer-loader": "^3.1.0",
-        "babel-core": "^6.1.2",
-        "babel-loader": "^6.1.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-preset-es2015": "^6.1.2",
-        "babel-preset-react": "^6.1.2",
-        "babel-preset-stage-0": "^6.16.0",
-        "css-loader": "^0.9.0",
-        "exports-loader": "^0.6.2",
-        "extract-text-webpack-plugin": "^0.8.2",
-        "faker": "^3.0.1",
-        "file-loader": "^0.8.1",
-        "gulp": "^3.8.11",
-        "gulp-babel": "^6.1.0",
-        "jsdom": "7.0.2",
-        "json-loader": "^0.5.2",
-        "mocha": "^2.2.1",
-        "node-libs-browser": "^0.5.2",
-        "parse-keys": "^1.3.0",
-        "raw-loader": "^0.5.1",
-        "react-hot-loader": "^1.2.7",
-        "should": "^7.1.1",
-        "sorty": "^1.2.0",
-        "style-loader": "^0.13.0",
-        "stylus-loader": "^1.4.0",
-        "webpack": "^1.9.12",
-        "webpack-dev-server": "^1.9.0"
-    },
-    "dependencies": {
-        "clone": "^1.0.2",
-        "css-utils": "^1.0.0",
-        "drag-helper": "^1.2.3",
-        "es6-promise": "^3.0.2",
-        "has-touch": "^1.0.1",
-        "hasown": "^1.0.1",
-        "node-uuid": "^1.4.3",
-        "normalize.css": "^3.0.3",
-        "object-assign": "^4.0.1",
-        "react": "0.14.8",
-        "react-dom": "0.14.8",
-        "react-class": "^1.2.4",
-        "react-dnd": "^2.1.4",
-        "react-dnd-html5-backend": "^2.1.2",
-        "react-load-mask": "^2.0.1",
-        "react-menus": "^2.0.5",
-        "react-simple-toolbar": "^1.0.5",
-        "react-style-normalizer": "^1.2.8",
-        "react-virtual-scroller": "^2.1.3",
-        "region": "^2.1.2",
-        "region-align": "^2.1.2",
-        "ustring": "^1.4.1",
-        "whatwg-fetch": "^0.10.0"
-    },
-    "author": "ZippyUI <contact@zippyui.com>",
-    "contributors": [],
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/zippyui/react-datagrid/issues"
-    },
-    "homepage": "https://github.com/zippyui/react-datagrid"
+  "name": "react-datagrid",
+  "version": "2.1.1",
+  "description": "React DataGrid",
+  "main": "lib/index.js",
+  "scripts": {
+    "webpack:build": "webpack -d --config webpack.config.base.babel.js --define process.env.NODE_ENV='\"production\"'",
+    "webpack:dev:run": "webpack-dev-server -d --config webpack.config.dev.babel.js --hot --display-error-details",
+    "webpack:dev:build": "webpack -d --config webpack.config.dev.babel.js --progress --color --display-error-details",
+    "webpack:prod:build": "NODE_ENV=production webpack -p --config webpack.config.prod.babel.js",
+    "test": "mocha --recursive --reporter spec --require should",
+    "test-w": "mocha --recursive --reporter spec --require should --watch",
+    "lib": "gulp",
+    "build-style": "webpack --progress --colors --config build/build-style.config.js",
+    "build-style-dist": "webpack --progress --colors --config build/build-style-dist.config.js",
+    "build-style-dist-min": "webpack --progress --colors --config build/build-style-dist-min.config.js",
+    "stats": "webpack --profile --progress --colors --config build/dist.config.js --json > stats.json",
+    "dist": "webpack --progress --colors --config build/dist.config.js",
+    "watch-dist": "webpack --watch --progress --colors --config build/dist.config.js",
+    "dist.min": "webpack --progress --colors -p --config build/dist.min.config.js",
+    "build": "NODE_ENV=production npm run lib && npm run dist && npm run dist.min && npm run build-style && npm run build-style-dist && npm run build-style-dist-min",
+    "dev": "NODE_ENV=production PORT=9090 webpack-dev-server --progress --colors --config  build/dev.config.js",
+    "hot": "NODE_ENV=production HOT=true PORT=9090 webpack-dev-server --progress --colors --config build/dev.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zippyui/react-datagrid.git"
+  },
+  "keywords": [
+    "grid",
+    "datagrid",
+    "data-grid",
+    "grid",
+    "widget",
+    "table",
+    "list",
+    "react-component",
+    "react",
+    "grid"
+  ],
+  "devDependencies": {
+    "autoprefixer-loader": "^3.1.0",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.9.0",
+    "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "faker": "^3.0.1",
+    "file-loader": "^0.8.1",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^6.1.0",
+    "jsdom": "7.0.2",
+    "json-loader": "^0.5.2",
+    "mocha": "^2.2.1",
+    "node-libs-browser": "^0.5.2",
+    "parse-keys": "^1.3.0",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^1.2.7",
+    "should": "^7.1.1",
+    "sorty": "^1.2.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "resolve-url-loader": "^1.6.0",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.0",
+    "html-webpack-plugin": "^1.7.0",
+    "webpack": "^1.9.12",
+    "webpack-dev-server": "^1.9.0",
+    "react-addons-css-transition-group": "^15.3.2",
+    "extract-text-webpack-plugin": "^1.0.1"
+  },
+  "dependencies": {
+    "clone": "^1.0.2",
+    "css-utils": "^1.0.0",
+    "drag-helper": "^1.2.3",
+    "es6-promise": "^3.0.2",
+    "has-touch": "^1.0.1",
+    "hasown": "^1.0.1",
+    "immutability-helper": "^2.0.0",
+    "node-uuid": "^1.4.3",
+    "normalize.css": "^3.0.3",
+    "object-assign": "^4.0.1",
+    "react": "0.14.8",
+    "react-class": "^1.2.4",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "0.14.8",
+    "react-load-mask": "^2.0.1",
+    "react-menus": "^2.0.5",
+    "react-simple-toolbar": "^1.0.5",
+    "react-style-normalizer": "^1.2.8",
+    "react-toolbox": "^1.2.5",
+    "react-virtual-scroller": "^2.1.3",
+    "region": "^2.1.2",
+    "region-align": "^2.1.2",
+    "ustring": "^1.4.1",
+    "whatwg-fetch": "^0.10.0"
+  },
+  "author": "ZippyUI <contact@zippyui.com>",
+  "contributors": [],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zippyui/react-datagrid/issues"
+  },
+  "homepage": "https://github.com/zippyui/react-datagrid"
 }
